fixed error in dark mode toggle

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ body {
   border: 1px solid #fbf7ef;
   height: 100%;
 }
+
+.container-dark-mode {
+  border: 1px solid #222;
+  height: 100%;
+}
